syntax = "proto3";
package sysjoblog.v1;

import "google/api/annotations.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/descriptor.proto";
import "pagin.proto";

option go_package = "hope/api/admin/sysjoblog/v1;v1";

// The SysJobLog service definition.
service SysJobLog {

  // 分页查询SysJobLog
  rpc GetPageSysJobLog (SysJobLogPageReq) returns (SysJobLogPageReply)  {
    option (google.api.http) = {
      get: "/v1/sys/job/log/page"
    };
  }

  // 获取SysJobLog
  rpc GetSysJobLog (SysJobLogReq) returns (SysJobLogReply)  {
    option (google.api.http) = {
      get: "/v1/sys/job/log/{id}"
    };
  }

  // 更新SysJobLog
  rpc UpdateSysJobLog (SysJobLogUpdateReq) returns (SysJobLogUpdateReply)  {
    option (google.api.http) = {
      put: "/v1/sys/job/log/{id}"
      body: "*"
    };
  }

  // 创建SysJobLog
  rpc CreateSysJobLog (SysJobLogCreateReq) returns (SysJobLogCreateReply)  {
    option (google.api.http) = {
      post: "/v1/sys/job/log"
      body: "*"
    };
  }

  // 删除SysJobLog
  rpc DeleteSysJobLog (SysJobLogDeleteReq) returns (SysJobLogDeleteReply)  {
    option (google.api.http) = {
      delete: "/v1/sys/job/log/{id}"
    };
  }

  // 批量删除SysJobLog
  rpc BatchDeleteSysJobLog (SysJobLogBatchDeleteReq) returns (SysJobLogDeleteReply)  {
    option (google.api.http) = {
      delete: "/v1/sys/job/log"
    };
  }

}

// 查询搜索请求
message SysJobLogPageReq {
    //分页查询参数
    pagin.Pagination pagin = 1;
    //查询条件参数
    SysJobLogReq param = 2;
}

// 查询搜索返回
message SysJobLogPageReply {
    //分页参数
    pagin.Pagination pagin = 1;
    //查询条目
    repeated SysJobLogReply items = 2;
}


// 查询搜索请求
message SysJobLogReq {
    int64 id = 1;
    //编码
    int64 jobId = 2;
    //名称
    string jobName = 3;
    //job启动时返回的id
    int32 entryId = 4;
    //状态
    bool status = 5;
    //耗时
    google.protobuf.Duration duration = 6;
    //执行详情,错误信息
    string info = 7;
    //创建时间
    google.protobuf.Timestamp createdAt = 8;
    //更新时间
    google.protobuf.Timestamp updatedAt = 9;
    //创建者
    int64 createBy = 10;
    //更新者
    int64 updateBy = 11;
    //租户
    int64 tenantId = 12;

}

// 查询搜索返回
message SysJobLogReply {
    int64 id = 1;
    //编码
    int64 jobId = 2;
    //名称
    string jobName = 3;
    //job启动时返回的id
    int32 entryId = 4;
    //状态
    bool status = 5;
    //耗时
    google.protobuf.Duration duration = 6;
    //执行详情,错误信息
    string info = 7;
    //创建时间
    google.protobuf.Timestamp createdAt = 8;
    //更新时间
    google.protobuf.Timestamp updatedAt = 9;
    //创建者
    int64 createBy = 10;
    //更新者
    int64 updateBy = 11;
    //租户
    int64 tenantId = 12;

}

// 创建SysJobLog请求
message SysJobLogCreateReq {
    //编码
    int64 jobId = 1;
    //名称
    string jobName = 2;
    //job启动时返回的id
    int32 entryId = 3;
    //状态
    bool status = 4;
    //耗时
    google.protobuf.Duration duration = 5;
    //执行详情,错误信息
    string info = 6;

}

// 创建SysJobLog返回
message SysJobLogCreateReply {
    int64 id = 1;
    //编码
    int64 jobId = 2;
    //名称
    string jobName = 3;
    //job启动时返回的id
    int32 entryId = 4;
    //状态
    bool status = 5;
    //耗时
    google.protobuf.Duration duration = 6;
    //执行详情,错误信息
    string info = 7;
    //创建时间
    google.protobuf.Timestamp createdAt = 8;
    //更新时间
    google.protobuf.Timestamp updatedAt = 9;
    //创建者
    int64 createBy = 10;
    //更新者
    int64 updateBy = 11;
    //租户
    int64 tenantId = 12;

}

// 更新SysJobLog请求
message SysJobLogUpdateReq {
    int64 id = 1;
    //编码
    int64 jobId = 2;
    //名称
    string jobName = 3;
    //job启动时返回的id
    int32 entryId = 4;
    //状态
    bool status = 5;
    //耗时
    google.protobuf.Duration duration = 6;
    //执行详情,错误信息
    string info = 7;

}


// 更新SysJobLog返回
message SysJobLogUpdateReply {
    int64 id = 1;
    //编码
    int64 jobId = 2;
    //名称
    string jobName = 3;
    //job启动时返回的id
    int32 entryId = 4;
    //状态
    bool status = 5;
    //耗时
    google.protobuf.Duration duration = 6;
    //执行详情,错误信息
    string info = 7;

}

// 删除SysJobLog请求
message SysJobLogDeleteReq {
    int64 id = 1;
}


// 批量删除SysJobLog请求
message SysJobLogBatchDeleteReq {
    repeated int64 ids = 1;
}


// 删除SysJobLog返回
message SysJobLogDeleteReply {
    bool result = 1;
}

